style.css
/*
Theme Name: Extendable
Theme URI: https://github.com/extendify/extendable
Author: Extendify
Author URI: https://extendify.com
Description: Extendable is a distinct, dynamic block theme designed as a canvas for your next online venture. Sporting multiple style variations, Extendable is the most expressive block theme yet. Go fresh, bold, bohemian or minimal — with a single click.
Requires at least: 6.6
Tested up to: 6.8
Requires PHP: 7.4
Version: 2.0.22
License: GNU General Public License v2 or later
License URI: http://www.gnu.org/licenses/gpl-2.0.html
Text Domain: extendable
Tags: one-column, custom-colors, custom-menu, custom-logo, e-commerce, editor-style, featured-images, full-site-editing, block-patterns, rtl-language-support, sticky-post, threaded-comments

Extendable is a derivative work of the code from the
Twenty Twenty-Two WordPress Theme, which is licensed GPLv2.

Extendable WordPress Theme, (C) 2022 Extendify Inc.
Extendable therefore is also distributed under the terms of the GNU GPL.
*/


/* Fallback for deprecate variables.
---------------------------------------------------------------------------- */
:root {
	--wp--custom--spacing--small: var(--wp--preset--spacing--30, clamp(1.5rem, 5vw, 2rem));
	--wp--custom--spacing--medium: var(--wp--preset--spacing--50, clamp(2.5rem, 8vw, 4rem));
	--wp--custom--spacing--large: var(--wp--preset--spacing--60, clamp(2.5rem, 8vw, 6rem));
	--wp--custom--spacing--outer: max(1.25rem, 4vw);
}

/*
 * Smooth scrolling
 */

 html {
	scroll-behavior: smooth;
  }

/*
 * Font smoothing.
 * This is a niche setting that will not be available via Global Styles.
 * https://github.com/WordPress/gutenberg/issues/35934
 */

body {
	-moz-osx-font-smoothing: var(--wp--custom--typography--font-smoothing--moz, auto);
	-webkit-font-smoothing: var(--wp--custom--typography--font-smoothing--webkit, auto);
}

/*
 * Text and navigation link styles.
 * Necessary until the following issue is resolved in Gutenberg:
 * https://github.com/WordPress/gutenberg/issues/27075
 */

a {
	text-decoration-style: var(--wp--custom--elements--link--static--text-decoration-style, solid);
	text-decoration-thickness: var(--wp--custom--elements--link--text-decoration-thickness, 1px);
	text-underline-offset: var(--wp--custom--elements--link--text-underline-offset, 0.25ch);
}

a:hover,
a:focus {
	text-decoration-style: var(--wp--custom--elements--link--interactive--text-decoration-style, dashed);
}

:where(.wp-site-blocks *:focus) {
	outline-width:1px;
	outline-style:solid
}

a:active {
	text-decoration: none;
}

/*
 * Navigation Block
 */

 @media (min-width: 600px) {
    .site-logo-title {
        display:none
    }
}

.wp-block-navigation__responsive-container.has-modal-open.is-menu-open .site-logo-title {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 0.25rem;
    padding-bottom: var(--wp--preset--spacing--30);
    position: relative;
}

.wp-block-navigation__responsive-container.has-modal-open.is-menu-open .site-logo-title::after {
    content: "";
    position: absolute;
    left: calc(-1 * var(--wp--preset--spacing--30));
    right: calc(-1 * var(--wp--preset--spacing--30));
    bottom: 0;
    height: 1px;
    background: #8080801d;
}

.wp-block-navigation__responsive-container.has-modal-open.is-menu-open .site-logo-title img {
	max-height: 42px !important;
	height: auto !important;
	width: auto !important;

}

.wp-block-navigation__responsive-container.has-modal-open.is-menu-open .site-logo-title .site-title {
	font-size: 1.25rem;
	font-weight: 700;
	color: var(--wp--preset--color--foreground);
	text-transform: uppercase;
    letter-spacing: -0.02em;
}

.wp-block-navigation__responsive-container.is-menu-open .wp-block-navigation__responsive-container-content {
	padding-top: var(--wp--preset--spacing--30);
}

.has-modal-open .wp-block-navigation__responsive-container-close {
	background-color:var(--wp--preset--color--tertiary);
	padding: 0.625rem;
	border-radius: 100%;
    top: -2.5px !important;
}

.has-modal-open .wp-block-navigation__responsive-container.is-menu-open .wp-block-navigation__responsive-container-content .wp-block-navigation__container {
	gap: 0 !important;
	width: 100%;
}

.has-modal-open .wp-block-navrigation__containe, .has-modal-open .wp-block-navigation__container ul {
    row-gap: 0.75rem !important;
    width: 100% !important;
}

.has-modal-open .wp-block-navigation__responsive-container.is-menu-open .wp-block-navigation__responsive-container-content > ul.wp-block-navigation__container > li.wp-block-navigation-item:not(.wp-block-navigation__submenu-container) {
	border-bottom: 1px solid #8080801d;
	padding-top: 0.5rem;
	padding-bottom: 0.5rem;
    width: 100%;
}

.has-modal-open .wp-block-navigation__responsive-container.is-menu-open .wp-block-navigation__responsive-container-content .has-child .wp-block-navigation__submenu-container {
	padding: 1rem 0.75rem;
    gap: 0.5rem !important;
 }

.has-modal-open .wp-block-navigation__responsive-dialog ul.wp-block-navigation__container > li:not(.wp-block-navigation__submenu-container) > a.wp-block-navigation-item__content {
    font-size: 1.25rem;
	font-weight: 600;
}

.has-modal-open .wp-block-navigation__submenu-container {
   padding-top: 0.75rem !important;
}

.has-modal-open .wp-block-navigation__responsive-dialog ul.wp-block-navigation__container .wp-block-navigation-submenu .wp-block-navigation-item a {
    font-size: 1rem !important;
}

.wp-block-navigation .wp-block-navigation-item a:hover,
.wp-block-navigation .wp-block-navigation-item a:focus {
	text-decoration: underline;
	text-decoration-style: solid;
}

/* Don't display the homepage in the Page List block, when located inside a navigation element. */
nav .wp-block-pages-list__item.wp-block-navigation-item.menu-item-home {
	display: none;
}

/*
 * Responsive menu container padding.
 * This ensures the responsive container inherits the same
 * spacing defined above. This behavior may be built into
 * the Block Editor in the future.
 */

.wp-block-navigation__responsive-container.is-menu-open {
	padding-top: var(--wp--preset--spacing--30);
	padding-bottom: var(--wp--preset--spacing--30);
	padding-right: var(--wp--preset--spacing--30);
	padding-left: var(--wp--preset--spacing--30);
}

/*
 * --------------------------------------------------------
 *  Custom - blocks
 * --------------------------------------------------------
 */

 /* Button
----------------------------------------------------------*/
.wp-element-button {
	transition: background-color 0.15s ease;
}
.wp-block-button .wp-block-button__link.is-style-outline:not(.has-background):hover,
.wp-block-button.is-style-outline>.wp-block-button__link:not(.has-background):hover {
	background-color: rgba(159, 159, 159, 0.2);
}

/* Table
----------------------------------------------------------*/
.wp-block-table.is-style-stripes tbody tr:nth-child(odd){
	background-color: var(--wp--custom--blocks--core-table--variant-stripes--color--background, var(--wp--preset--color--tertiary));
}

/* Template Part Block
----------------------------------------------------------*/

/* Temporary fix until template-part blocks support spacing */

footer.wp-block-template-part:not([style*="margin-top"]) {
	margin-top: 0;
}

/* Quote - 'Plain' variation
----------------------------------------------------------*/
blockquote:is(.is-style-plain) {
	border: none;
	padding-left: 0;
}

/* Search Block
----------------------------------------------------------*/
:where(.wp-block-search__button-inside .wp-block-search__inside-wrapper) {
	border-color: var(--wp--custom--elements--input--border--color);
	border-radius: var(--wp--custom--elements--button--border--radius);
	border-width: var(--wp--custom--elements--input--border--width);
}
:where(.wp-block-search__button-inside .wp-block-search__inside-wrapper) .wp-block-search__input {
	border-color: transparent;
}
.wp-block-search .wp-block-search__input {
	border-radius: var(--wp--custom--elements--button--border--radius);
}

/* Image
----------------------------------------------------------*/
.wp-block-image[style*="-radius"]:not([style*="overflow"]) { overflow: hidden }

/*
 * --------------------------------------------------------
 *  Custom - experimental
 * --------------------------------------------------------
 */

.block-editor-block-list__block.wp-block.is-default-size.wp-block-site-logo .components-resizable-box__container,
.wp-block-site-logo.is-default-size img {
    max-height: 42px !important;
    height: auto !important;
    width: auto !important;
}

/* Ensure default logo works well on light and dark backgrounds
----------------------------------------------------------*/
.wp-block-site-logo img[src*="extendify-demo-"],
.wp-block-site-logo img[src*="ext-custom-logo-"] {
	filter: var(--wp--preset--duotone--primary-foreground);
}


/*
 * Remove all animations, transitions and smooth scroll
 * for people that prefer not to see them.
 */
@media (prefers-reduced-motion: reduce) {
	html:focus-within {
		scroll-behavior: auto;
	}

	*,
	*::before,
	*::after {
		animation-duration: 0.01ms !important;
		animation-iteration-count: 1 !important;
		transition-duration: 0.01ms !important;
		scroll-behavior: auto !important;
	}
}

/*
 * Matching caret and focus outline colors.
 */
input, textarea {
	caret-color: inherit;
	outline-color: inherit;
}

/*
 * Matching input with outline button style.
 */
:where(.wp-block-post-comments-form) input:not([type=submit]),
:where(.wp-block-post-comments-form) textarea {
	background-color: var(--wp--preset--color--background);
	color: var(--wp--preset--color--foreground);
	border-color: inherit;
}


/*
 * Woocommerce temporarily customization until the woo blocks offer support
 */

.woocommerce-Tabs-panel--description h2, .woocommerce-Reviews-title {
	font-size: var(--wp--preset--font-size--medium);
}

.wp-block-button.wc-block-components-product-button {
	flex-direction: row;
    flex-wrap: wrap;
    justify-content: start;
	gap: 1rem;
}
.wp-block-button.wc-block-components-product-button a.added_to_cart {
	margin-top: 0;
}

.woocommerce-checkout.woocommerce-page header.wp-block-template-part nav.wp-block-navigation {
	visibility: hidden;
}

/*
 * Adds offset for sticky header overlap
 */

 .sticky-header-offset-container .entry-content > .wp-block-group {
	scroll-margin-top: var(--wp--preset--spacing--60);
}

